--- a/templates/edit.html
+++ b/templates/edit.html
@@ -11,7 +11,7 @@
         <div class="row jumbotron m-xs-1 rounded bg-white text-left">
 
             <div class="col-md-10 col-xs-6">
-                <p class="display-4" style="color: #017bff; font-size:2.5em">
+                <p class="display-4" style="color: #017bff; font-size:2.5em; font-family:Lato">
                     {{ article[0]["article"] }}
                 </p>
 
