--- a/static/styles.css
+++ b/static/styles.css
@@ -287,16 +287,34 @@ dl:nth-of-type(odd) {
 
 
 
+.ct-btn-scroll {
+  width: 49px;
+  height: 49px;
+  position: absolute;
+  bottom: 2vh;
+  left: 0;
+  right: 0;
+  margin: auto;
+  padding-top: 0px;
+  z-index: 9;
+  border-radius: 50%;
+  -webkit-transition: background-color 0.25s ease-in-out;
+  transition: background-color 0.25s ease-in-out;
+}
+
+/*#beamerSelector{*/
+/*    background-color: #017bff;*/
+/*}*/
 
 
-
-
-
-
-
-
-
-
+#preloader{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    overflow: visible;
+    background: #ffffff;
+}
 
 #title{
     font-size: 2.5em;
@@ -338,7 +356,12 @@ dl:nth-of-type(odd) {
   padding-bottom: 2.5rem;    /* Footer height */
 }
 
-
+@media screen and (max-width: 1025px){
+#read{
+    padding-right: 0 !important;
+    padding-left:0 !important;
+}
+}
 
 
 
@@ -349,7 +372,10 @@ dl:nth-of-type(odd) {
 #title {
     font-size: 1.5em;
 }
-
+#read{
+    padding-right: 0 !important;
+    padding-left:0 !important;
+}
 #content-box {
     width: 50%;
 }
@@ -358,5 +384,11 @@ dl:nth-of-type(odd) {
 }
 #profile-stuff1{
     width: 100%;
+}
+#status, .img{
+    transform: scale(0.75, 0.75);
+}
+#status{
+    margin-right: 1vh;
 }
 }
