--- a/templates/history.html
+++ b/templates/history.html
@@ -6,18 +6,18 @@
 
 {% block main %}
 
-<div class="container mb-5">
+<div class="mb-5" style="padding-left:20vh; padding-right:20vh">
     <div class="row jumbotron m-xs-1 rounded bg-white text-left">
 
         <div class="col-md-9 col-xs-6">
-            <p class="" style="color: #017bff" id="title">
+            <p class="" style="color: #017bff; font-family:Lato" id="title">
                 {{ article[0]['article'] }}
             </p>
 
-            <p style="font-size: medium;">
+            <p style="font-size: samll;">
                 <a href="/apa/{{ article[0]['id'] }}" style="color: #017bff">APA citation (Click to edit): <em style="color: black">{{ article[0]['citation'] }}</em></a>
             </p>
-            <p style="font-size: medium;">
+            <p style="font-size: small;">
                 <a href="/doi/{{ article[0]['id'] }}" style="color: #017bff">DOI (Click to edit): <em style="color: black">{{ article[0]['doi'] }}</em></a>
             </p>
 
@@ -26,7 +26,7 @@
         </div>
         <div class="row" style="margin:50px">
             <font style="color: #017bff"><a href="/edit/{{ summary_id }}"><i class="fa fa-edit fa-2x border-0"></i><br>Edit</a></font>&nbsp
-            <font style="color: #017bff; text-align: center"><a href="/issues/{{ summary_id }}"><i class="fa fa-book fa-2x border-0"></i><br>Issues</a></font>&nbsp
+            <font style="color: #017bff; text-align: center"><a href="/issues/{{ summary_id }}"><i class="fa fa-exclamation-triangle fa-2x border-0"></i><br>Issues</a></font>&nbsp
             <font style="color: #017bff; text-align: center"><a href="/read/{{ summary_id }}"><i class="fa fa-book fa-2x border-0"></i><br>Read</a></font>
 
         </div>
