--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
 {% endblock %}
 
 {% block navbar %}
+<div id="preloader">
+    <div id="status" class="text-center">
+        <img style="margin-top: 20vh" src="{{ url_for('static', filename='dna.svg') }}" alt="Loading...">
+    </div>
+</div>
 <nav class="navbar navbar-expand-md navbar-dark" style="background: #000d25">
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
@@ -95,9 +100,34 @@
                 {% endif %}
             </div>
         </nav>
+        <script>
+            $(document).ready(function(){
+              $(".scroll").on('click', function(event) {
+                if (this.hash !== "") {
+                  event.preventDefault();
+                  var hash = this.hash;
+                  $('html, body').animate({
+                    scrollTop: $(hash).offset().top
+                  }, 800, function(){
+                    window.location.hash = hash;
+                  });
+                }
+              });
+            });
+        </script>
+        <script>
+           window.onload = function(){
+                //hide the preloader
+                $("#preloader").fadeOut(1000, function(){
+                    $("#preloader").remove();
+                });
+            };
+        </script>
+
 {% endblock %}
 
 {% block main %}
+
 <div class="main">
     <div class="home_page row">
         <div class="col-lg-7 col-12">
@@ -110,20 +140,27 @@
                     <br>
                     of scientific articles enhanced for readability.
                 </p><br>
-                <a href="/explore" class="btn bg-0 border border-white">
+                <a href="/explore" class="btn btn-lg bg-0 border border-white">
                     Explore &nbsp &#8594;
                 </a>
+
             </div>
         </div>
         <div class="col m-0 p-0">
-            <div class="h-50">
-
+            <div class="h-50 row w-100" style="font-family: Lato">
+                <!--<div class="my-auto">-->
+                <!--    <p>Featured</p>-->
+                <!--    <a href="/read/{{ feature['id'] }}">{{ feature['article'] }}</a>-->
+                <!--</div>-->
             </div>
             <img class="h-50 w-100 mt-auto" src="{{ url_for('static', filename='gene1.png') }}" alt="">
         </div>
+        <a class="ct-btn-scroll ct-js-btn-scroll scroll" id="scroll" href="#section2"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="50" height="50" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M86,6.88c-43.65844,0 -79.12,35.46156 -79.12,79.12c0,43.65844 35.46156,79.12 79.12,79.12c43.65844,0 79.12,-35.46156 79.12,-79.12c0,-43.65844 -35.46156,-79.12 -79.12,-79.12zM86,13.76c39.93625,0 72.24,32.30375 72.24,72.24c0,39.93625 -32.30375,72.24 -72.24,72.24c-39.93625,0 -72.24,-32.30375 -72.24,-72.24c0,-39.93625 32.30375,-72.24 72.24,-72.24zM85.6775,41.1725c-0.14781,0.02688 -0.29562,0.06719 -0.43,0.1075c-1.59906,0.36281 -2.72781,1.80063 -2.6875,3.44v74.175l-21.6075,-21.6075c-0.83312,-0.86 -2.05594,-1.22281 -3.225,-0.9675c-1.29,0.22844 -2.32469,1.16906 -2.6875,2.41875c-0.36281,1.26313 0.01344,2.60688 0.9675,3.49375l27.09,26.9825c0.06719,0.1075 0.13438,0.215 0.215,0.3225l0.215,0.215c0.06719,0.08063 0.13438,0.14781 0.215,0.215c0.04031,0 0.06719,0 0.1075,0c0.22844,0.215 0.48375,0.38969 0.7525,0.5375c0.04031,0 0.06719,0 0.1075,0c0.06719,0.04031 0.14781,0.08063 0.215,0.1075c0.04031,0 0.06719,0 0.1075,0c0.1075,0.04031 0.215,0.08063 0.3225,0.1075c0.36281,0.05375 0.71219,0.05375 1.075,0c0.06719,0 0.14781,0 0.215,0c0.29563,-0.06719 0.59125,-0.17469 0.86,-0.3225c0.45688,-0.22844 0.86,-0.56437 1.1825,-0.9675l27.305,-27.1975c1.37063,-1.37062 1.37063,-3.57437 0,-4.945c-1.37062,-1.37062 -3.57437,-1.37062 -4.945,0l-21.6075,21.6075v-74.175c0.04031,-0.99437 -0.36281,-1.94844 -1.075,-2.62031c-0.72562,-0.68531 -1.70656,-1.02125 -2.6875,-0.92719z"></path></g></g></svg></a>
     </div>
 
-    <div class="home_page row">
+    <div class="home_page row" id="section2">
+
          <div class="col-lg-7 col-12">
             <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
                 <div class="mb-2" style="font-size: 3.0em">
@@ -136,23 +173,26 @@
                     <br>
                     Learn new topics faster
                 </p>
+
                 <br>
-                <a href="/about" class="btn bg-white btn-primary" style="color: #017bff">
+                <a href="/about" class="btn bg-white btn-lg btn-primary" style="color: #017bff">
                     Learn more &nbsp &#8594;
                 </a>
-            </div>
-        </div>
 
+            </div>
+
+        </div>
         <div class="col m-0 p-0">
             <div class="h-20">
             </div>
-            <img class="h-60 w-100" style="margin-top: 100px;"src="{{ url_for('static', filename='science.png') }}" alt="">
+            <img class="h-60 w-100" style="margin-top: 15vh;"src="{{ url_for('static', filename='science.png') }}" alt="">
             <div class="h-20">
             </div>
         </div>
+        <a class="ct-btn-scroll ct-js-btn-scroll scroll" id="scroll2" href="#section3" style="bottom:-104vh"><img src="https://img.icons8.com/ios/50/000000/circled-down-2.png"/></a>
     </div>
 
-    <div class="home_page row">
+    <div class="home_page row" id="section3">
          <div class="col-lg-7 col-12">
             <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
                 <div class="mb-2" style="font-size: 3.0em">
@@ -166,7 +206,7 @@
                     Work with AI to quickly dcyphr articles
                 </p>
                 <br>
-                <a href="/tasks" class="btn bg-0 border border-white">
+                <a href="/tasks" class="btn bg-0 btn-lg border border-white">
                     Contribute &nbsp &#8594;
                 </a>
             </div>
@@ -178,7 +218,7 @@
 
             </div>
 
-            <div class="p-3 mx-5 border border-white bg-white" style="min-height: 50%; border-radius:20px; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71);">
+            <div class="p-3 mx-5 border border-white bg-white" style="min-height: 50%; border-radius:20px; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71); position: relative">
                 <div class="text-left text-muted" style="font-size:30px; margin-left:20px; font-family: Arial">Leaderboard</div>
 
                 <div class="row m-3 ">
@@ -216,14 +256,18 @@
                     </div>
                 </div>
                 {% endfor %}
-
+                <div class="text-left"style="bottom:2vh; left:2vh; position:absolute">
+                     <small class="text-muted">All-time top contributors. Points are earned through creating summaries, editing articles to improve accuracy, and others' engaging with your content.</small>
+                </div>
             </div>
         </div>
+        <a class="ct-btn-scroll ct-js-btn-scroll scroll" href="#section4" style="bottom:-204vh"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="50" height="50" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M86,6.88c-43.65844,0 -79.12,35.46156 -79.12,79.12c0,43.65844 35.46156,79.12 79.12,79.12c43.65844,0 79.12,-35.46156 79.12,-79.12c0,-43.65844 -35.46156,-79.12 -79.12,-79.12zM86,13.76c39.93625,0 72.24,32.30375 72.24,72.24c0,39.93625 -32.30375,72.24 -72.24,72.24c-39.93625,0 -72.24,-32.30375 -72.24,-72.24c0,-39.93625 32.30375,-72.24 72.24,-72.24zM85.6775,41.1725c-0.14781,0.02688 -0.29562,0.06719 -0.43,0.1075c-1.59906,0.36281 -2.72781,1.80063 -2.6875,3.44v74.175l-21.6075,-21.6075c-0.83312,-0.86 -2.05594,-1.22281 -3.225,-0.9675c-1.29,0.22844 -2.32469,1.16906 -2.6875,2.41875c-0.36281,1.26313 0.01344,2.60688 0.9675,3.49375l27.09,26.9825c0.06719,0.1075 0.13438,0.215 0.215,0.3225l0.215,0.215c0.06719,0.08063 0.13438,0.14781 0.215,0.215c0.04031,0 0.06719,0 0.1075,0c0.22844,0.215 0.48375,0.38969 0.7525,0.5375c0.04031,0 0.06719,0 0.1075,0c0.06719,0.04031 0.14781,0.08063 0.215,0.1075c0.04031,0 0.06719,0 0.1075,0c0.1075,0.04031 0.215,0.08063 0.3225,0.1075c0.36281,0.05375 0.71219,0.05375 1.075,0c0.06719,0 0.14781,0 0.215,0c0.29563,-0.06719 0.59125,-0.17469 0.86,-0.3225c0.45688,-0.22844 0.86,-0.56437 1.1825,-0.9675l27.305,-27.1975c1.37063,-1.37062 1.37063,-3.57437 0,-4.945c-1.37062,-1.37062 -3.57437,-1.37062 -4.945,0l-21.6075,21.6075v-74.175c0.04031,-0.99437 -0.36281,-1.94844 -1.075,-2.62031c-0.72562,-0.68531 -1.70656,-1.02125 -2.6875,-0.92719z"></path></g></g></svg></a>
     </div>
 
-    <div class="home_page row">
-        <div class="col-lg-7 col-12">
-            <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
+    <div class="home_page row" id="section4">
+        <div class="col-lg-6 col-lg-5 col-lg">
+            <div class="index_info text-left pr-0" style="font-family: Lato; font-weight: 300">
                 <div class="mb-2" style="font-size: 3.0em">
                     REQUEST INSIGHTS
                 </div>
@@ -235,18 +279,19 @@
                     Get personalized dcyphr-d articles
                 </p>
                 <br>
-                <a href="/request" class="btn bg-white btn-primary" style="color: #017bff">
+                <a href="/request" class="btn btn-lg bg-white btn-primary" style="color: #017bff">
                     Request &nbsp &#8594;
                 </a>
             </div>
         </div>
-        <div class="col m-0 p-0">
+        <div class="col m-0 pr-5">
             <div class="h-20">
             </div>
-            <img class="h-60 w-100" style="margin-top: 100px;"src="{{ url_for('static', filename='network.png') }}" alt="">
+            <img class="h-60 w-100" style="margin-top: 10vh;"src="{{ url_for('static', filename='network.png') }}" alt="">
             <div class="h-20">
             </div>
         </div>
     </div>
+    <a href="https://icons8.com/icon/26193/scroll-down" class="text-muted">Scroll Down icon by Icons8</a>
 </div>
 {% endblock %}
