--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
     <head>
+
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -62,6 +63,13 @@
 
             gtag('config', 'UA-162663603-1');
         </script>
+
+        <script>
+        	var beamer_config = {
+        		product_id : 'FACxsuQA21706' //DO NOT CHANGE: This is your product code on Beamer
+        	};
+        </script>
+        <script type="text/javascript" src="https://app.getbeamer.com/js/beamer-embed.js" defer="defer"></script>
 
 
         <title>dcyphr: {% block title %}{% endblock %}</title>
