--- a/templates/public.html
+++ b/templates/public.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="col-6 text-left">
-                <h3 style="font-family: Georgia">{{ info[0]['first'] }} {{ info[0]['last'] }}</h3>
+                <h3 style="font-family: Georgia">{{ info[0]['first'] }} {{ info[0]['last'] }} <img src="https://img.icons8.com/nolan/30/verified-account.png"/></h3>
                 <p class="">@{{ info[0]["username"] }}</p>
                 <p>{{ info[0]['bio'] | safe }}</p>
             </div>
