--- a/templates/read.html
+++ b/templates/read.html
@@ -17,13 +17,30 @@
                 <button class="btn btn-outline-primary border20" data-target="#endorsers" data-toggle="collapse">{{ endorsements[0]['count'] }}<i class="fa fa-check"></i></button>
                 {% endif %}
             </p>
+            {% if endorsements | length == 0 %}
             <div id="endorsers" class="collapse my-3">
                 <div class="row px-3 pl-4 bg-light border-bottom" style="font-family: Georgia; color:black">
                     Endorsers
                 </div>
-                {% if endorsements | length == 0 %}
-                <div class="row px-3 pl-0 border-bottom text-left" style="font-family: Lato;"></div>
-                {% else %}
+
+                    <div class="row px-3 pl-0 border-bottom text-left" style="font-family: Lato;">
+                        <div class="col-12" style="font-size: 16px">
+                            placeholder
+                            <img src="https://img.icons8.com/nolan/18/verified-account.png" class="pb-2"/>
+                            <div class="text-muted" style="font-size: 12px; display: inline"> &nbsp
+
+                            placeholder...</div>
+
+                        </div>
+
+
+                </div>
+
+            {% else %}
+            <div id="endorsers" class="collapse my-3">
+                <div class="row px-3 pl-4 bg-light border-bottom" style="font-family: Georgia; color:black">
+                    Endorsers
+                </div>
                 {% for i in range(endorsements | length) %}
 
                     <div class="row px-3 pl-0 border-bottom text-left" style="font-family: Lato;">
@@ -42,8 +59,8 @@
 
 
                 {% endfor %}
-                {% endif %}
                 </div>
+                {% endif %}
             </div>
             <p style="font-size: medium">
 
