--- a/templates/read.html
+++ b/templates/read.html
@@ -66,7 +66,7 @@
 
                 <form method="POST" style="display: inline-block">
                 {% for i in range(tag_length) %}
-                <a href="/tag/{{tags[i]['id']}}" class="btn btn-outline-secondary btn-sm border20">{{ tags[i]['title'] }}</a>
+                <a href="/tag/{{tags[i]['id']}}/0" class="btn btn-outline-secondary btn-sm border20">{{ tags[i]['title'] }}</a>
                 {% if z == "true" %}
                 <button type="submit" name="delete" value="{{tags[i]['id']}}" class="btn btn-outline-primary btn-sm">-</button>
                 {% endif %}
