--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
 
     <div class="home_page row" id="section2">
 
-         <div class="col-lg-7 col-12">
+         <div class="col-lg-6 col-lg-5 col-lg">
             <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
                 <div class="mb-2" style="font-size: 3.0em">
                     DECENTRALIZING SCIENCE
@@ -179,10 +179,10 @@
             </div>
 
         </div>
-        <div class="col m-0 p-0">
+        <div class="col-lg m-0 p-0">
             <div class="h-20">
             </div>
-            <img class="h-60 w-100" style="margin-top: 15vh;"src="{{ url_for('static', filename='science.png') }}" alt="">
+            <img class="h-60 w-100" style="margin-top: 5vh;"src="{{ url_for('static', filename='research.png') }}" alt="">
             <div class="h-20">
             </div>
         </div>
