--- a/templates/layout.html
+++ b/templates/layout.html
@@ -111,7 +111,14 @@
 
             gtag('config', 'UA-162663603-1');
         </script>
-
+        <script>
+            function mouseOut(){
+                document.getElementById("#div1").style.display = 'none';
+            }
+            function mouseOver(){
+                document.getElementById("#div1").style.display = 'block';
+            }
+        </script>
         <script>
         var HelloButton = function (context) {
             var ui = $.summernote.ui;
@@ -131,6 +138,28 @@
             return button.render();   // return button as jquery object
         };
 
+        var commentButton = function(context){
+            var ui = $.summernote.ui;
+
+            // create button
+            var button = ui.button({
+                contents: '<i class="fa fa-thumbs-up border-0"/></i>',
+                tooltip: 'Add a comment',
+                click: function () {
+                 // invoke insertText method with 'hello' on editor module.
+                var highlight = window.getSelection();
+                var html = "<span style='position: relative'><span onmouseout='mouseOut()' onmouseover='mouseOver()' class='bg-warning' style='position: absolute'>" + highlight + '</span><div id="div1" style="display:none; position:absolute" class="card"> some text to show </div></span>';
+                context.invoke('editor.pasteHTML', html);
+            }
+            }  );
+
+            return button.render();
+        }
+
+
+
+
+
     $(document).ready(function() {
         $('#summernote').summernote({
         toolbar: [
@@ -144,7 +173,8 @@
         ['view', ['fullscreen', 'codeview', 'help']], ['mybutton', ['wiki']]
         ],
         buttons: {
-            wiki: HelloButton
+            wiki: HelloButton,
+            comment: commentButton
         }
         });
     });
