--- a/templates/browse.html
+++ b/templates/browse.html
@@ -1,4 +1,24 @@
 {% extends "layout.html" %}
+{% block filter %}
+<script>
+    function filterFunction() {
+          var input, filter, a, i;
+          input = document.getElementById("myInput");
+          filter = input.value.toUpperCase();
+          div = document.getElementById("myDropdown");
+          a = div.getElementsByClassName("dropdown-item");
+          for (i = 0; i < a.length; i++) {
+            txtValue = a[i].textContent || a[i].innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+              a[i].style.display = "";
+            } else {
+              a[i].style.display = "none";
+            }
+          }
+        }
+</script>
+{% endblock %}
+
 
 {% block title %}
     Browse
