--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,10 +1,84 @@
 {% extends "layout.html" %}
 
+
+{% block summernote %}
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-bs4.min.css" rel="stylesheet" defer>
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-bs4.min.js" defer></script>
+<script>
+        var HelloButton = function (context) {
+            var ui = $.summernote.ui;
+
+            // create button
+            var button = ui.button({
+                contents: '<i class="fa fa-wikipedia-w border-0"/></i>',
+                tooltip: 'Link to any Wiki page',
+                click: function () {
+                 // invoke insertText method with 'hello' on editor module.
+                var highlight = window.getSelection();
+                var html = "<a href='https://en.wikipedia.org/wiki/" + highlight + "' target='_blank'>" + highlight + "</a>";
+                context.invoke('editor.pasteHTML', html);
+            }
+            }  );
+
+            return button.render();   // return button as jquery object
+        };
+
+        var commentButton = function(context){
+            var ui = $.summernote.ui;
+
+            // create button
+            var button = ui.button({
+                contents: '<i class="fa fa-thumbs-up border-0"/></i>',
+                tooltip: 'Add a comment',
+                click: function () {
+                 // invoke insertText method with 'hello' on editor module.
+                var highlight = window.getSelection();
+                var html = "<span style='position: relative'><span onmouseout='mouseOut()' onmouseover='mouseOver()' class='bg-warning' style='position: absolute'>" + highlight + '</span><div id="div1" style="display:none; position:absolute" class="card"> some text to show </div></span>';
+                context.invoke('editor.pasteHTML', html);
+            }
+            }  );
+
+            return button.render();
+        }
+
+
+
+
+
+    $(document).ready(function() {
+        $('#summernote').summernote({
+        toolbar: [
+        ['style', ['style']],
+        ['font', ['bold', 'underline', 'clear']],
+        ['fontname', ['fontname']],
+        ['color', ['color']],
+        ['para', ['ul', 'ol', 'paragraph']],
+        ['table', ['table']],
+        ['insert', ['link', 'picture', 'video']],
+        ['view', ['fullscreen', 'codeview', 'help']], ['mybutton', ['wiki']]
+        ],
+        buttons: {
+            wiki: HelloButton,
+            comment: commentButton
+        }
+        });
+    });
+</script>
+<script>
+    $(document).ready(function() {
+        $("#summernote").summernote();
+    });
+</script>
+{% endblock %}
+
+
 {% block title %}
     {{ article[0]["article"] }}
 {% endblock %}
 
 {% block main %}
+
+
 <script type="text/javascript" src="{{ url_for('static', filename='hemingway.js') }}"></script>
 
 <div class="p-0 mx-0 w-100" style="">
@@ -146,6 +220,10 @@
 </div>
 </div>
 </div>
-
+<script defer>
+    $(document).ready(function() {
+        $("#summernote").summernote();
+    });
+</script>
 {% endblock %}
 
