--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,20 +8,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Lato:300,600' rel='stylesheet'>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" defer>
+        <link href='https://fonts.googleapis.com/css?family=Lato:300,600' rel='stylesheet' defer>
 
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-        <link href="/static/styles.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+        <link href="/static/styles.css" rel="stylesheet" defer>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css" defer>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-        <script src="https://www.w3schools.com/lib/w3.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" defer></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" defer></script>
+        <script src="https://www.w3schools.com/lib/w3.js" defer></script>
 
-        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" defer>
 
         <div id="preloader">
             <div id="status" class="text-center">
@@ -36,33 +36,8 @@
                 });
             };
         </script>
-        <!-- include summernote bs4 css/js -->
-        <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-bs4.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote-bs4.min.js"></script>
-        <script defer>
-            window.VerifaliaWidgetConfig = {
-            appKey: '72fe6c88d9ea43e4a8a32c6f70c0c25d',
-            inputBindings: {
-                autoWireup: true,
-                debounceTime: 1000,
-                preventSubmission: "invalid, throttled",
-                appendHiddenFields: true,
-                classNames: {
-                    base: 'verifalia-field',
-                    processing: 'verifalia-field-processing',
-                    valid: 'verifalia-field-valid',
-                    invalid: 'verifalia-field-invalid',
-                    throttled: 'verifalia-field-throttled',
-                    exception: 'verifalia-field-exception'
-                },
-            }
-            };
 
-        </script>
-        <script defer
-        src="https://unpkg.com/verifalia-widget@1.2.0/dist/verifalia-widget.js"
-        integrity="sha512-KNWaWGZz1V4Hm+9e4pdMB0rJ/wOY3ifDIYdfnHyoRnAXtpTxvxU+beMZ6nO//qqPYWcm9uFlIA1eye6/BAnbjQ=="
-        crossorigin="anonymous"></script>
+        {% block verifalia %}{% endblock %}
 
         <script>
         	var beamer_config = {
@@ -74,7 +49,7 @@
 
 
         <!-- Start of Async Drift Code -->
-        <script>
+        <script defer>
         "use strict";
 
         !function() {
@@ -111,96 +86,14 @@
 
             gtag('config', 'UA-162663603-1');
         </script>
-        <script>
-            function mouseOut(){
-                document.getElementById("#div1").style.display = 'none';
-            }
-            function mouseOver(){
-                document.getElementById("#div1").style.display = 'block';
-            }
-        </script>
-        <script>
-        var HelloButton = function (context) {
-            var ui = $.summernote.ui;
 
-            // create button
-            var button = ui.button({
-                contents: '<i class="fa fa-wikipedia-w border-0"/></i>',
-                tooltip: 'Link to any Wiki page',
-                click: function () {
-                 // invoke insertText method with 'hello' on editor module.
-                var highlight = window.getSelection();
-                var html = "<a href='https://en.wikipedia.org/wiki/" + highlight + "' target='_blank'>" + highlight + "</a>";
-                context.invoke('editor.pasteHTML', html);
-            }
-            }  );
 
-            return button.render();   // return button as jquery object
-        };
-
-        var commentButton = function(context){
-            var ui = $.summernote.ui;
-
-            // create button
-            var button = ui.button({
-                contents: '<i class="fa fa-thumbs-up border-0"/></i>',
-                tooltip: 'Add a comment',
-                click: function () {
-                 // invoke insertText method with 'hello' on editor module.
-                var highlight = window.getSelection();
-                var html = "<span style='position: relative'><span onmouseout='mouseOut()' onmouseover='mouseOver()' class='bg-warning' style='position: absolute'>" + highlight + '</span><div id="div1" style="display:none; position:absolute" class="card"> some text to show </div></span>';
-                context.invoke('editor.pasteHTML', html);
-            }
-            }  );
-
-            return button.render();
-        }
+        {% block filter %}{% endblock %}
 
 
 
 
-
-    $(document).ready(function() {
-        $('#summernote').summernote({
-        toolbar: [
-        ['style', ['style']],
-        ['font', ['bold', 'underline', 'clear']],
-        ['fontname', ['fontname']],
-        ['color', ['color']],
-        ['para', ['ul', 'ol', 'paragraph']],
-        ['table', ['table']],
-        ['insert', ['link', 'picture', 'video']],
-        ['view', ['fullscreen', 'codeview', 'help']], ['mybutton', ['wiki']]
-        ],
-        buttons: {
-            wiki: HelloButton,
-            comment: commentButton
-        }
-        });
-    });
-        </script>
-
-        <script>
-            function filterFunction() {
-                  var input, filter, a, i;
-                  input = document.getElementById("myInput");
-                  filter = input.value.toUpperCase();
-                  div = document.getElementById("myDropdown");
-                  a = div.getElementsByClassName("dropdown-item");
-                  for (i = 0; i < a.length; i++) {
-                    txtValue = a[i].textContent || a[i].innerText;
-                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                      a[i].style.display = "";
-                    } else {
-                      a[i].style.display = "none";
-                    }
-                  }
-                }
-        </script>
-
-
-
-
+    {% block summernote %}{% endblock %}
 
 
         <title>dcyphr: {% block title %}{% endblock %}</title>
@@ -311,11 +204,7 @@
             {% block main %}{% endblock %}
         </main>
 
-        <script>
-            $(document).ready(function() {
-                $("#summernote").summernote();
-            });
-        </script>
+
     </body>
     <br>
 <!-- Footer -->
